--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,7 @@
 {
   "name": "BPS Digital Manager",
   "short_name": "BPS Digital",
-  "description": "School Management System for Bhagyabantapur Primary School",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
@@ -10,12 +9,14 @@
     {
       "src": "logo.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "logo.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
